--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,16 @@
+# Configuration Supabase
+SUPABASE_URL=https://fenigama-dw.supabase.co
+SUPABASE_ANON_KEY=votre_clé_anon_ici
 
+# Server Configuration
+PORT=5002
+NODE_ENV=production
+
+# Security
+JWT_SECRET=bafingpay_marketplace_secret_2026
+
+# Marketplace Settings
+DEFAULT_CURRENCY=XOF
+FREE_SHIPPING_THRESHOLD=50000
+SHIPPING_FEE=2500
+TAX_RATE=0.18
