--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "BafingPay E-commerce Platform 2026",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "@supabase/supabase-js": "^2.38.0",
+    "@supabase/supabase-js": "^2.39.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1"
   },
