--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "bafingpay-marketplace",
-  "version": "1.0.0",
-  "description": "BafingPay E-commerce Platform 2026",
+  "name": "logofie",
+  "version": "2026.1.0",
+  "description": "Logofiè - Plateforme e-commerce avec IA de recommandations",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -15,7 +16,18 @@
   "engines": {
     "node": ">=20.0.0"
   },
-  "keywords": ["ecommerce", "marketplace", "bafingpay"],
-  "author": "BafingPay Team",
-  "license": "MIT"
+  "keywords": [
+    "logofie",
+    "ecommerce",
+    "artificial-intelligence",
+    "recommendations",
+    "supabase",
+    "railway"
+  ],
+  "author": "Logofiè Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Alpha11201/logofie.git"
+  }
 }
